--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <div class="content">
         <span class="title">Freelance Web Developer</span>
-        <h1>Hello, I’m <span>emma</span></h1>
+        <h1>Hello, I’m <span>VENKAT PRAVEEN</span></h1>
         <p>
           I’m working on a professional, visually sophisticated and
           technologically proficient, responsive and multi-functional React
